--- a/source/app/components/wi-curve-listing/wi-curve-listing.less
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.less
@@ -86,4 +86,11 @@ wi-curve-listing{
         padding: 2px;
         box-shadow: 0px 5px 8px #aaa;
     }
+    .zone-square {
+        width: 13px;
+        height: 13px;
+        display: inline-block;
+        margin-right: 5px;
+        vertical-align: text-top;
+    }
 }
