--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -21,7 +21,7 @@
             <div class="item-content" ng-click="wiBaseTreeview.onClick($index, $event, item)"
                 ng-dblclick="wiBaseTreeview.onDoubleClick($index);">
                 <div class="display-inline-block margin-right-0_5em">
-                    <span class="{{item.data.icon}}"></span>
+                    <span class="{{item.data.icon}}" style='vertical-align: text-bottom;'></span>
                     <div ng-show="wiBaseTreeview.showId && item.id" class='wi-parent-id'>{{item.id}}</div>
                 </div>
                 <span ng-if="wiBaseTreeview.isShowParentName && item.parentData">{{item.parentData.label}} /</span>
