--- a/source/app/components/wi-user/wi-user.html
+++ b/source/app/components/wi-user/wi-user.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="user-name">{{wiUser.username}}</div>
+    <div class="user-name">{{wiUser.company.name}} / {{wiUser.username}}</div>
     <div class='user-img-holder'>
         <img src="{{wiUser.imgUrl}}" alt="User Image" class="user-img">
     </div>
