update share project

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -778,3 +778,15 @@ input[type=checkbox].input-check {
         padding-left: 0;
     }
 }
+.list-scroll wi-base-treeview {
+	.wi-treeview-container{
+    	.wi-parent-node>.wi-parent-content {
+    		.icon-expanded {
+    			display: none;
+    		}
+    	}
+	}
+}
+.list-group li:nth-child(odd) {
+	background: #eee;
+};
