--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -790,3 +790,24 @@ input[type=checkbox].input-check {
 .list-group li:nth-child(odd) {
 	background: #eee;
 };
+.list-body {
+	flex: 1;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 5px;
+}
+.list-body wi-scroll .scroll-container {
+	border: 1px solid #A9A9A9;
+	border-top: none;
+}
+.text-heading {
+	color: #428bca;
+	font-size: 15px;
+	font-style: italic;
+}
+.checkFilter {
+	color: blue;
+	font-weight: bold;
+    text-shadow: 2px 2px 5px black;
+} 
