update css share project

--- a/source/components/wi-scroll/wi-scroll.html
+++ b/source/components/wi-scroll/wi-scroll.html
@@ -1,9 +1,9 @@
 <style>
     .scroll-container {
         overflow-x: hidden;
-        overflow-y: auto;
+        overflow-y: scroll;
         width: 100%;
-        //height: 400px;
+        /*height: 400px;*/
     }
     .scroll-busy {
         text-align: center;
