--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -798,16 +798,6 @@ input[type=checkbox].input-check {
     padding: 5px;
 }
 .list-body wi-scroll .scroll-container {
-	border: 1px solid #A9A9A9;
+	border: 1px solid #ccc;
 	border-top: none;
-}
-.text-heading {
-	color: #428bca;
-	font-size: 15px;
-	font-style: italic;
-}
-.checkFilter {
-	color: blue;
-	font-weight: bold;
-    text-shadow: 2px 2px 5px black;
-} 
+}  
