--- a/source/app/components/wi-zone-template-manager/wi-zone-template-manager.less
+++ b/source/app/components/wi-zone-template-manager/wi-zone-template-manager.less
@@ -10,13 +10,13 @@
     .left-side {
         flex: 1;
         height: 100%;
-        border: 1px solid #aaa;
+        border: 1px solid #ccc;
         border-radius: 5px;
         position: relative;   
         margin-right: 1em;
         .left-heading {
             display: flex;
-            border-bottom: 1px solid #aaa;
+            border-bottom: 1px solid #ccc;
             padding: 5px 15px;
             margin-bottom: 15px;
             h5 {
@@ -30,7 +30,7 @@
         }
         button {
             border: 1px solid #fff;
-            font-size: 15px;
+            font-size: 13px;
             padding: 5px;
             background-color: white;
         }
@@ -46,7 +46,7 @@
     .right-side {
         flex: 3;
         height: 100%;
-        border: 1px solid #aaa;
+        border: 1px solid #ccc;
         border-radius: 5px;
         position: relative;
         box-sizing: border-box;  
@@ -65,8 +65,9 @@
         }
         button {
             border: 1px solid #fff;
-            font-size: 20px;
+            font-size: 15px;
             background-color: white;
+            padding:0;
         }
         button:hover {
             border: 1px solid #ddd;
