--- a/source/app/components/wi-zone-template-manager/wi-zone-template-manager.html
+++ b/source/app/components/wi-zone-template-manager/wi-zone-template-manager.html
@@ -10,11 +10,11 @@
                     <button class='btn' ng-click="wiZoneTemplateManager.deleteTemplate()" ng-disabled="!wiZoneTemplateManager.selectedTemplate">
                         <i class="fa fa-times"></i>
                     </button>
-                    <button class='btn pull-right' ng-click="wiZoneTemplateManager.createTemplate()">
-                        <i class="fa fa-plus"></i>
+                    <button title="Create new template" class='btn pull-right' ng-click="wiZoneTemplateManager.createTemplate()">
+                        <i class="ti-plus"></i>
                     </button>
-                    <button class='btn' ng-click="wiZoneTemplateManager.refreshTemplateList()">
-                        <i class="fa fa-refresh"></i>
+                    <button title="Refresh templates list" class='btn' ng-click="wiZoneTemplateManager.refreshTemplateList()">
+                        <i class="ti-reload"></i>
                     </button>
                 </div>
             </div>
@@ -38,18 +38,18 @@
                 <option value="background">Template name</option>
             </select>
             <div class="button-area">
-                <button class='btn' ng-disabled="!(wiZoneTemplateManager.zoneTemplateEditted || !(!wiZoneTemplateManager.newTemplate || wiZoneTemplateManager.zoneTemplates.length==0))"
+                <button title="Apply changes" class='btn' ng-disabled="!(wiZoneTemplateManager.zoneTemplateEditted || !(!wiZoneTemplateManager.newTemplate || wiZoneTemplateManager.zoneTemplates.length==0))"
                     ng-click="wiZoneTemplateManager.editZoneTemplate()">
-                    <i class="fa fa-check"></i>
+                    <i class="ti-check"></i>
                 </button>
-                <button class='btn' ng-click="wiZoneTemplateManager.deleteZoneTemplate()" ng-disabled="!(wiZoneTemplateManager.newTemplate || wiZoneTemplateManager.selectedZoneTemplates.length!=0)">
-                    <i class="fa fa-times"></i>
+                <button title="Delete selected zones" class='btn' ng-click="wiZoneTemplateManager.deleteZoneTemplate()" ng-disabled="!(wiZoneTemplateManager.newTemplate || wiZoneTemplateManager.selectedZoneTemplates.length!=0)">
+                    <i class="ti-close"></i>
                 </button>
-                <button class='btn' ng-click="wiZoneTemplateManager.createZoneTemplate()" ng-disabled="!wiZoneTemplateManager.selectedTemplate">
-                    <i class="fa fa-plus"></i>
+                <button title="Create new zone" class='btn' ng-click="wiZoneTemplateManager.createZoneTemplate()" ng-disabled="!wiZoneTemplateManager.selectedTemplate">
+                    <i class="ti-plus"></i>
                 </button>
-                <button class='btn' ng-click="wiZoneTemplateManager.refreshZoneTemplateList()" ng-disabled="!wiZoneTemplateManager.selectedTemplate || wiZoneTemplateManager.newTemplate">
-                    <i class="fa fa-refresh"></i>
+                <button title="Refresh zones list"class='btn' ng-click="wiZoneTemplateManager.refreshZoneTemplateList()" ng-disabled="!wiZoneTemplateManager.selectedTemplate || wiZoneTemplateManager.newTemplate">
+                    <i class="ti-reload"></i>
                 </button>
             </div>
         </div>
@@ -59,7 +59,7 @@
                     <thead>
                         <tr>
                             <th style="width: 5%"></th>
-                            <th width="20%" style="text-align: center;">Zone name</th>
+                            <th width="20%" style="text-align: center;">Zoneset name</th>
                             <!-- <th width="20%">Sample</th> -->
                             <th width="25%" style="text-align: center;">Background</th>
                             <th width="25%" style="text-align: center;">Foreground</th>
