--- a/source/app/components/wi-curve-listing/wi-curve-listing.html
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.html
@@ -8,7 +8,7 @@
 		 tooltip="Show/Hide Properties" handler="wiCurveListing.togglePropPanel"></wi-button>
 	</wi-toolbar>
 	<wi-toolbar>
-		<wi-dropdown type='small' label='visualization Mode'>
+		<wi-dropdown type='small' label='Visualization Mode'>
 			<wi-button layout="icon-left" type="small" class="height-auto" label='Data' is-check-type="1" checked="wiCurveListing.visualizationMode=='Data'" handler="wiCurveListing.toggleVisualizationMode">
 			</wi-button>
 			<wi-button layout="icon-left" type="small" class="height-auto" label='Statistic' is-check-type="1" checked="wiCurveListing.visualizationMode=='Statistic'" handler="wiCurveListing.toggleVisualizationMode">
