--- a/source/app/components/wi-curve-listing/wi-curve-listing.less
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.less
@@ -93,4 +93,8 @@ wi-curve-listing{
         margin-right: 5px;
         vertical-align: text-top;
     }
+    .unsaved{
+        font-size: 9px;
+        vertical-align: text-top;
+    }
 }
