--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
@@ -83,19 +83,20 @@
                 width: auto;
             }
             table{
-                border-color: #bbb;
+                border-color: #ccc;
                 input{
                     width: 100%;
                 }
                 td {
                     text-align: center;
-                    border-color: #bbb;
+                    border-color: #ccc;
                 }
                 th {
-                    border-color: #bbb;
+                    background-color: #f3f3f3;
+                    border-color: #ccc;
+                    border-bottom: none;
                 }
             }    
         }
     }
-    
 }
