--- a/source/app/components/wi-zone-template-manager/wi-zone-template-manager.less
+++ b/source/app/components/wi-zone-template-manager/wi-zone-template-manager.less
@@ -67,7 +67,7 @@
             border: 1px solid #fff;
             font-size: 15px;
             background-color: white;
-            padding:0;
+            padding:5px;
         }
         button:hover {
             border: 1px solid #ddd;
@@ -83,16 +83,18 @@
                 width: auto;
             }
             table{
-                border-color: #bbb;
+                border-color: #ccc;
                 input{
                     width: 100%;
                 }
                 td {
                     text-align: center;
-                    border-color: #bbb;
+                    border-color: #ccc;
                 }
                 th {
-                    border-color: #bbb;
+                    background-color: #f3f3f3;
+                    border-color: #ccc;
+                    border-bottom: none;
                 }
             }    
         }
