--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
@@ -5,7 +5,7 @@
     height: 100%;
     background-color: white;
     .selected {
-        background-color: #ddd !important
+        background-color: #eee !important
     };
     .left-side {
         flex: 1;
